mikec/tests/PASS/printing/75.mc
/* print char */

int main(){

    printf("%c \n", 'a');

}