mikec/tests/FAIL/printing/25.mc
/*print int*/
int main(){
int a;
printf("test",a);
}
